syntax = "proto3";

package oms.v1;

option go_package = "oms-contract/api/proto;omsv1";

import "google/protobuf/timestamp.proto";

// Service definition
service OMS {
  // Order Management
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  
  // Position Management
  rpc GetPosition(GetPositionRequest) returns (GetPositionResponse);
}

// Data structures

enum Side {
  SIDE_UNSPECIFIED = 0;
  SIDE_BUY = 1;
  SIDE_SELL = 2;
}

enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_LIMIT = 1;
  ORDER_TYPE_MARKET = 2;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_SUBMITTED = 1;
  ORDER_STATUS_FILLED = 2;
  ORDER_STATUS_CANCELED = 3;
  ORDER_STATUS_REJECTED = 4;
}

// Messages

message CreateOrderRequest {
  int64 user_id = 1;
  string symbol = 2;
  Side side = 3;
  OrderType type = 4;
  double price = 5;
  double quantity = 6;
}

message CreateOrderResponse {
  int64 order_id = 1;
  OrderStatus status = 2;
}

message CancelOrderRequest {
  int64 order_id = 1;
}

message CancelOrderResponse {
  bool success = 1;
}

message GetOrderRequest {
  int64 order_id = 1;
}

message GetOrderResponse {
  int64 order_id = 1;
  int64 user_id = 2;
  string symbol = 3;
  Side side = 4;
  OrderType type = 5;
  double price = 6;
  double quantity = 7;
  double executed_quantity = 8;
  OrderStatus status = 9;
  google.protobuf.Timestamp created_at = 10;
}

message GetPositionRequest {
  int64 user_id = 1;
  string symbol = 2;
}

message GetPositionResponse {
  int64 user_id = 1;
  string symbol = 2;
  double quantity = 3;
  double entry_price = 4;
  double margin = 5;
  double leverage = 6;
  double unrealized_pnl = 7;
}
